[package]
name = "livelocd"
version = "0.1.0"
edition = "2024"
authors = ["Bailey Burnsed <mail@baileyburnsed.dev>"]
description = "A simple Axum plugin for real-time location tracking via WebSockets and JSON API."
license = "MIT"
repository = "https://github.com/Burnsedia/livelocd"
homepage = "https://github.com/Burnsedia/livelocd"
documentation = "https://docs.rs/livelocd"
readme = "README.md"
keywords = ["axum", "websockets", "realtime", "location", "plugin"]
categories = ["network-programming", "web-programming::websocket", "api-bindings"]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1.6.0"

